--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 Libyubikey-client NEWS -- History of user-visible changes.      -*- outline -*-
 
+* Version 1.1 (unreleased)
+
+
 * Version 1.0 (released 2008-06-17)
 
 ** Initial release, code from yubico-pam.
