--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ Libyubikey-client NEWS -- History of user-visible changes.      -*- outline -*-
 
 * Version 1.1 (unreleased)
 
-** Install libykclient.h too.
+** Install libykclient.h in $prefix.
 
 * Version 1.0 (released 2008-06-17)
 
