--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,13 @@
 Libyubikey-client NEWS -- History of user-visible changes.      -*- outline -*-
 
+* Version 1.2 (unreleased)
+
+** ykclient: Set exit code as per OTP verification result.
+Inspired by discussion in
+<http://forum.yubico.com/viewtopic.php?f=3&t=89>.
+
+** Install libykclient.h.
+
 * Version 1.1 (released 2008-06-25)
 
 ** Install libykclient.h in $prefix.
