--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 Libyubikey-client NEWS -- History of user-visible changes.      -*- outline -*-
 
+* Version 1.3 (unreleased)
+
+** ykclient: Add new API yubikey_client_set_url_template.
+Allows setting a private server to query.
+
 * Version 1.2 (released 2008-07-24)
 
 ** ykclient: Set exit code as per OTP verification result.
