--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Libyubikey-client NEWS -- History of user-visible changes.      -*- outline -*-
 * Version 1.4 (unreleased)
 
 ** Added include paths to make aclocal find libcurl.m4.
+Thanks to Oden Eriksson <oeriksson@mandriva.com>.
 
 * Version 1.3 (released 2008-09-15)
 
