--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 Libyubikey-client NEWS -- History of user-visible changes.      -*- outline -*-
 
-* Version 1.4 (unreleased)
+* Version 1.4 (released 2008-09-15)
 
 ** Added include paths to make aclocal find libcurl.m4.
 Thanks to Oden Eriksson <oeriksson@mandriva.com>.
