--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,10 @@ Libyubikey-client NEWS -- History of user-visible changes.      -*- outline -*-
 
 ** Add libtool -export-symbols-regex to restrict exported symbols.
 
+** Avoid use of asprintf, to make it work under Solaris too.
+
+** Fix memory leaks.
+
 * Version 1.4 (released 2008-09-15)
 
 ** Added include paths to make aclocal find libcurl.m4.
