--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
-* Version 2.0 (unreleased)
+* Version 2.0 (released 2009-03-25)
 
 ** Major rewrite of library.
 The library changed name from libyubikey-client.* to libykclient.* and
