--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
-* Version 2.2 (unreleased)
+* Version 2.2 (released 2009-03-31)
 
 ** Add new API ykclient_set_client_hex to set client key in hex format.
 
