--- a/README
+++ b/README
@@ -1,7 +1,8 @@
-#summary Introduction to Yubikey client C library
-#labels Featured,Phase-Deploy
+Introduction to Yubikey client C library
+========================================
 
-= Introduction =
+Introduction
+------------
 
 This is a library written in C to validate a Yubikey OTP against the
 Yubico online server.  Description of included files:
@@ -18,48 +19,52 @@ Yubico online server.  Description of included files:
 
 * configure.ac, Makefile.am: Autoconf/Automake files.
 
-== Building from SVN ==
+
+Building from Git
+-----------------
 
 Skip to the next section if you are using an official packaged
 version.
 
-You may check out the sources using SVN with the following command:
+You may check out the sources using Git with the following command:
 
-{{{
-  svn checkout http://yubico-c-client.googlecode.com/svn/trunk/ yubico-c-client
-}}}
+-----------
+  $ git clone git://github.com/Yubico/yubico-c-client.git
+-----------
 
 This will create a directory 'yubico-c-client'.  Enter the directory:
 
-{{{
-  cd yubico-c-client
-}}}
+-----------
+  $ cd yubico-c-client
+-----------
 
 Autoconf, automake and libtool must be installed.
 
 Generate the build system using:
 
-{{{
-  autoreconf --install
-}}}
+-----------
+  $ autoreconf --install
+-----------
 
-= Building =
+
+Building
+--------
 
 To build using the Autoconf, automake and libtool infrastructure,
 which is recommend for more advanced purposes especially for
 cross-compilation and shared library support, build it as follows.
 
-{{{
-$ ./configure
-$ make check install
-}}}
+-----------
+  $ ./configure
+  $ make check install
+-----------
 
 Another way to build the package is by running 'make -f simple.mk
 check'.  It will build each component, and also test it.  See below
 for sample session.  This is useful if you want to target a platform
 that doesn't support Autoconf/automake/libtool well.
 
-{{{
+-----------
 jas@mocca:~/src/yubico-c-client$ make -f simple.mk  check
 cc -I. -Wall -g -DPACKAGE=\"ykclient\" -DPACKAGE_VERSION=\"0\"   -c -o ykclient.o ykclient.c
 cc -lcurl  ykclient.o tool.c   -o ykclient
@@ -71,9 +76,11 @@ yubikey_request (2): Yubikey OTP was replayed (REPLAYED_OTP)
 strerror(0): Success
 strerror(BAD_OTP): Yubikey OTP was bad (BAD_OTP)
 jas@mocca:~/src/yubico-c-client$ 
-}}}
+-----------
 
-= Command-line tools =
+
+Command-line tools
+------------------
 
 There is one command line tool, ykclient, to validate a particular
 OTP.  It needs a client id, which you can allocate for yourself on
@@ -81,7 +88,7 @@ Yubico's web site.
 
 Example session below.
 
-{{{
+-----------
 jas@mocca:~/src/yubico-c-client$ ./ykclient 
 Usage: ./ykclient <client_id> <yubikey_otp>
  CLIENT_ID: your client id integer
@@ -92,8 +99,10 @@ Input:
   token: dteffujehknhfjbrjnlnldnhcujvddbikngjrtgh
 Verification output (2): Yubikey OTP was replayed (REPLAYED_OTP)
 jas@mocca:~/src/yubico-c-client$ 
-}}}
+-----------
 
-= Questions? =
+
+Questions?
+----------
 
 Talk to <simon@yubico.com>.
