--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
+* Version 2.6 (unreleased)
+
+** Use fprintf+exit instead of glibc-ism errx.
+Reported by Jussi Sallinen <jussi@jus.si>.
+
+** Indent code and replace // comments with /* */ comments (for C89).
+
 * Version 2.5 (released 2010-05-31)
 
 ** Implement almost all of Validation protocol 2.0.
