--- a/NEWS
+++ b/NEWS
@@ -7,14 +7,16 @@ Reported by Jussi Sallinen <jussi@jus.si>.
 
 ** Indent code and replace // comments with /* */ comments (for C89).
 
-* Version 2.5 (released 2010-05-31)
+** Fix dates of releases for 2.4 and 2.5 below (2011 not 2010).
+
+* Version 2.5 (released 2011-05-31)
 
 ** Implement almost all of Validation protocol 2.0.
 The part still known to be missing is parallell querys to all validation
 servers using curl-multi. Includes significant patches by
 Sebastien Martini <seb@dbzteam.org> and qistoph@gmail.com.
 
-* Version 2.4 (released 2010-03-02)
+* Version 2.4 (released 2011-03-02)
 
 ** Add possibility to supply validation service URL.
 Patch by Remi Mollon <remi.mollon@cern.ch>.
