--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
-* Version 2.7 (unreleased)
+* Version 2.7 (released 2011-11-23)
 
 ** Verify server signatures per default when a key is provided. The old
 behavior can be restored with ykclient_set_verify_signature (ykc, 0);
