--- a/README
+++ b/README
@@ -105,4 +105,4 @@ jas@mocca:~/src/yubico-c-client$
 Questions?
 ----------
 
-Talk to <simon@yubico.com>.
+Talk to <yubico-devel@googlegroups.com>.
