--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
+* Version 2.10 (unreleased)
+
 * Version 2.9 (released 2012-08-07)
 
 ** Compability with curl versions before 7.20.
