--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
-* Version 2.10 (unreleased)
+* Version 2.10 (released 2013-05-15)
 
 ** Add ykclient_global_init and ykclient_global_done.
 
