--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
+* Version 2.13 (unreleased)
+
 * Version 2.12 (released 2013-10-18)
 
 ** Use pkg-config to find curl, instead of libcurl.m4.
