--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
+* Version 2.14 (unreleased)
+
 * Version 2.13 (released 2014-09-12)
 
 ** libykclient: Skip responses where the curl status isn't CURLE_OK.
