--- a/README
+++ b/README
@@ -5,13 +5,6 @@ an Yubikey OTP against Yubico's servers.  See
 https://www.yubico.com[the Yubico website]
 for more information about Yubico and the YubiKey.
 
-=== License ===
-
-The project is licensed under a BSD license.  See the file COPYING for
-exact wording.  For any copyright year range specified as YYYY-ZZZZ in
-this package note that the range specifies every single year in that
-closed interval.
-
 === Building ===
 
 After downloading and unpacking the package tarball, you build it as
@@ -52,6 +45,7 @@ https://upgrade.yubico.com/getapikey[here].
 
 Example usage:
 
+[source, sh]
 -----------
 jas@mocca:~/src/yubico-c-client$ ./ykclient 
 Usage: ./ykclient <client_id> <yubikey_otp>
@@ -64,3 +58,10 @@ Input:
 Verification output (2): Yubikey OTP was replayed (REPLAYED_OTP)
 jas@mocca:~/src/yubico-c-client$ 
 -----------
+
+=== License ===
+
+The project is licensed under a BSD license.  See the file COPYING for
+exact wording.  For any copyright year range specified as YYYY-ZZZZ in
+this package note that the range specifies every single year in that
+closed interval.
