--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
+* Version 2.15 (unreleased)
+
 * Version 2.14 (released 2015-03-05)
 
 ** Switch default templates to https.
