--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
-* Version 2.15 (unreleased)
+* Version 2.15 (released 2015-11-12)
+
+** Add ykclient_get_server_response() to the library.
+
+** Show more information from the commandline on debug.
+
+** Add proxy support via Curl.
 
 * Version 2.14 (released 2015-03-05)
 
